--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyEduAdmin">
-        <activity android:name=".CategoryActivity"></activity>
+        <activity android:name=".CategoryActivity"
+            android:theme="@style/Theme.MyEduAdmin.NoActionBar"></activity>
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.MyEduAdmin.NoActionBar">
             <intent-filter>
@@ -18,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
