--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyEduAdmin">
-        <activity android:name=".activities.SetsActivity"
+        <activity android:name=".activities.QuestionsActivity"
             android:theme="@style/Theme.MyEduAdmin.NoActionBar"></activity>
+        <activity
+            android:name=".activities.SetsActivity"
+            android:theme="@style/Theme.MyEduAdmin.NoActionBar" />
         <activity
             android:name=".activities.CategoryActivity"
             android:theme="@style/Theme.MyEduAdmin.NoActionBar" />
